# brigid

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.toml  pyproject.toml
docs/superpowers/plans/: 2026-06-06-model-profiles.md  2026-06-07-personalities.md  2026-06-18-at-file-references.md  2026-06-18-multiline-input.md
docs/superpowers/specs/: 2026-06-06-model-profiles-design.md  2026-06-07-personalities-design.md  2026-06-18-at-file-references-design.md  2026-06-18-multiline-input-design.md
scripts/: smoke.py
src/brigid/: __init__.py  __main__.py  cli.py  config.py  errors.py  llm.py  paths.py  permissions.py  references.py  render.py  repl.py  session.py
src/brigid/tools/: __init__.py  builtin.py  mcp_bridge.py
tests/: __init__.py  test_config.py  test_llm.py  test_permissions.py  test_references.py  test_render.py  test_repl.py  test_schema_bridge.py  test_session.py  test_tools_builtin.py
