[project]
name = "brigid"
version = "0.1.0"
description = "Local Ollama agent harness with MCP and built-in tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andrew" }]
dependencies = [
    "ollama>=0.5.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "prompt_toolkit>=3.0.47",
    "rich>=13.7.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
brigid = "brigid.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brigid"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
]
ignore = ["E501"]   # line length handled by formatter

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
